@@ -1,10 +1,10 @@
 /****************************************************************************
  *
  * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/clib/sys/netdb.h,v $
- * $Date: 2002/09/24 21:02:37 $
- * $Revision: 1.3 $
+ * $Date: 2003/10/26 13:34:33 $
+ * $Revision: 1.4 $
  * $State: Exp $
- * $Author: admin $
+ * $Author: joty $
  *
  ***************************************************************************/
 
@@ -21,12 +21,13 @@
 
 __BEGIN_DECLS
 
-extern struct hostent *_gethostbyname (const char *name);
-extern struct hostent *_gethostbyaddr (const char *addr, int len, int type);
-extern int _sclose (int sd);
-extern int _sread (int sd, void *data, int nbyte);
-extern int _swrite (int sd, const void *data, int nbyte);
-extern int _sioctl (int sd, unsigned long request, void *arg);
+extern struct hostent *_gethostbyname (const char *name) __THROW;
+extern struct hostent *_gethostbyaddr (const char *addr,
+				       int len, int type) __THROW;
+extern int _sclose (int sd) __THROW;
+extern int _sread (int sd, void *data, int nbyte) __THROW;
+extern int _swrite (int sd, const void *data, int nbyte) __THROW;
+extern int _sioctl (int sd, unsigned long request, void *arg) __THROW;
 
 __END_DECLS
 
