@@ -1,10 +1,10 @@
 /****************************************************************************
  *
- * $Source$
- * $Date$
- * $Revision$
- * $State$
- * $Author$
+ * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/clib/sys/uio.h,v $
+ * $Date: 2002/12/22 18:22:28 $
+ * $Revision: 1.5 $
+ * $State: Exp $
+ * $Author: admin $
  *
  ***************************************************************************/
 
@@ -32,12 +32,14 @@ struct iovec
 /* Read data from file descriptor FD, and put the result in the
    buffers described by VECTOR, which is a vector of COUNT `struct iovec's.
    The buffers are filled in the order specified.  */
-extern ssize_t readv (int __fd, const struct iovec * __vector, int __count);
+extern ssize_t readv (int __fd, const struct iovec * __vector,
+		      int __count) __THROW;
 
 /* Write data pointed by the buffers described by VECTOR, which
    is a vector of COUNT `struct iovec's, to file descriptor FD.
    The data is written in the order specified. */
-extern ssize_t writev (int __fd, const struct iovec * __vector, int __count);
+extern ssize_t writev (int __fd, const struct iovec * __vector,
+		       int __count) __THROW;
 
 __END_DECLS
 
